feat: add admin user endpoints